experimental/ir/testdata/options/validate/packed_proto2.proto.stderr.txt
error: expected repeated field, found singular field
  --> testdata/options/validate/packed_proto2.proto:8:5
   |
 8 |     optional int32 o1 = 1 [packed = true];
   |     ^^^^^^^^^^^^^^                  ---- packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

error: expected packable type, found message type `buf.test.M`
  --> testdata/options/validate/packed_proto2.proto:11:14
   |
11 |     repeated M m1 = 3 [packed = true];
   |              ^                  ---- packed encoding set here
   |
   = help: packed encoding can only be set on repeated fields of integer, float,
           `bool`, or enum type

encountered 2 errors
